[package]
name = "osm-cli"
version = "0.1.0"
description = "Command-line tool to interact with the OpenStreetMap API"
authors = ["Jake Low <hello@jakelow.com>"]
homepage = "https://github.com/jake-low/osm-cli"
repository = "https://github.com/jake-low/osm-cli"
license = "ISC"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive", "cargo"] }
jsonxf = "1.1.1"
ureq = "2.10.1"

[[bin]]
name = "osm"
path = "src/main.rs"
