[package]
name = "osm-cli"
version = "0.1.0"
description = "Command-line tool to interact with the OpenStreetMap API"
authors = ["Jake Low <hello@jakelow.com>"]
homepage = "https://github.com/jake-low/osm-cli"
repository = "https://github.com/jake-low/osm-cli"
license = "ISC"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive", "cargo"] }
env_logger = "0.11.5"
jsonxf = "1.1.1"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
ureq = "2.10.1"

[[bin]]
name = "osm"
path = "src/main.rs"
